<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/appColor"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/BildirimGönder"
        android:background="@color/appColor"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/myriadpro_regular"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="#FFFFBA"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BildirimInfo1"
            android:fontFamily="@font/myriadpro_regular"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BildirimInfo2"
            android:fontFamily="@font/myriadpro_regular"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BildirimInfo3"
            android:fontFamily="@font/myriadpro_regular"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp"
            />





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/İlSeç"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:background="@color/appColor"
            android:layout_marginTop="@dimen/_minus2sdp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/acBildirimIl"
                android:layout_width="match_parent"
                android:background="@color/appColor"
                android:backgroundTint="@color/appColor"
                android:textColor="@color/colorWhite"
                android:editable="false"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edtBildirimBaslik"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/BildirimBaşlık"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/ef_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtBildirimMesaj"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/BildirimMesaj"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/ef_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/txtBildirimGonderLast"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/Gönder"
            android:background="@drawable/background_login"
            android:textColor="@color/ef_white"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            />







    </LinearLayout>




</LinearLayout>