<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="serviscepde.com.tr.TestActivity">




    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/İl" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ServisBaşlamaSaati">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSaat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"/>




    </com.google.android.material.textfield.TextInputLayout>


    <AutoCompleteTextView
        android:id="@+id/ilce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/İlçe" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/Başlık">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIseAracBaslık"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/Fiyat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIseAracFiyat"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/Açıklama">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIseAracAciklama"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteIseAracil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/İl" />

    </com.google.android.material.textfield.TextInputLayout>







</LinearLayout>