<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/dialog_background"
    android:paddingBottom="@dimen/_15sdp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kaydet"
        android:fontFamily="@font/myriadpro_regular"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/İsimGir"
        android:fontFamily="@font/myriadpro_regular"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edtFiltreAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="İsim" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:layout_marginTop="@dimen/_15sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtFiltreKayıtAdIptal"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:text="@string/İptal"
            android:textColor="@color/colorBlue"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/txtFiltreKayıtAdTamam"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:text="@string/Tamam"
            android:textColor="@color/colorBlue"
            android:fontFamily="@font/myriadpro_regular"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"
            />






    </LinearLayout>

</LinearLayout>