<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:text="@string/İletişim"
        android:textColor="@color/colorWhite"
        android:background="@color/appColor"
        android:textSize="@dimen/_12ssp"
        android:gravity="center"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/İletişimInfo"
        android:fontFamily="@font/myriadpro_regular"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        />

    <LinearLayout
        android:id="@+id/linNumber1"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icon_call"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number1"
            android:textSize="@dimen/_14ssp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/myriadpro_regular"
            android:textColor="@color/colorBlack"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linNumber2"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/icon_call"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number2"
            android:textSize="@dimen/_14ssp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/myriadpro_regular"
            android:textColor="@color/colorBlack"
            />


    </LinearLayout>

</LinearLayout>